# knn_cpp

./: .gitignore  CMakeLists.txt  main.cc
lib/: k_nearest_neighbors.h  linear_algebra.h  utils.h
tests/: CMakeLists.txt  knn_test.cc  la_test.cc  utils_test.cc
